--- a/DutchTreat/config.json
+++ b/DutchTreat/config.json
@@ -10,5 +10,10 @@
       "Default": "Information",
       "Microsoft": "Warning"
     }
+  },
+  "Tokens": {
+    "Key": "a;lkjasdf;lkajsd;flkjas ;dflkja sd",
+    "Issuer": "localhost",
+    "Audience": "users"
   }
 }
